# bigq-ethereum-rag

./: .env.example  README.md  app.py  pyproject.toml
bigq_ai_app/: ui.py
bigq_ai_app/core/: config.py  executor.py  intent_classifier.py  multimodal_orchestrator.py  orchestrator.py  prompt_builder.py  semantic_orchestrator.py  sql_generator.py  validator.py
bigq_ai_app/utils/: ai_inference.py  ingestion.py  schema_reader.py  table_selection.py
docs/: Ethereum-blockchain-data-model.md  Ethereum-business-glossary.md  Sample-SQL-queries.md
notebooks/: bigq_remote_llm.ipynb  ethereum_analyzer.ipynb  test_validations.ipynb
tests/: test_document.txt  test_integration.py  test_intent_classifier.py  test_multimodal_extraction.py  test_prompt_builder.py  test_sql_generator.py  test_utils.py
